--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-refund-manager/mollie-refund-manager.scss
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-refund-manager/mollie-refund-manager.scss
@@ -126,6 +126,14 @@
             .summary-item-value {
                 text-align: right;
                 padding-right: 0;
+
+                &.heading {
+                    font-weight: bold;
+                }
+
+                &.no-border {
+                    border-bottom-color: transparent;
+                }
             }
 
             .summary-item-value-remaining {
