--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-refund-manager/mollie-refund-manager.scss
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-refund-manager/mollie-refund-manager.scss
@@ -128,6 +128,14 @@
                 padding-right: 0;
             }
 
+            .summary-item-value.heading {
+                font-weight: bold;
+            }
+
+            .summary-item-value.no-border {
+                border-bottom-color: transparent;
+            }
+
             .summary-item-value-remaining {
                 margin: 0;
                 padding-right: 5px;
