--- a/src/Resources/views/storefront/component/product/card/action.html.twig
+++ b/src/Resources/views/storefront/component/product/card/action.html.twig
@@ -34,7 +34,7 @@
 
 {% block page_product_detail_product_buy_button %}
 
-    {% if mollie_subscriptions_enabled_beta and product.customFields.mollie_payments_product_subscription_enabled %}
+    {% if product.customFields.mollie_payments_product_subscription_enabled %}
         <button class="btn btn-block btn-buy" title="{{ "molliePayments.subscriptions.product.addToCartText"|trans|sw_sanitize }}">
             {{ "molliePayments.subscriptions.product.addToCartText"|trans|sw_sanitize }}
         </button>
