--- a/src/Resources/views/storefront/page/product-detail/buy-widget-form.html.twig
+++ b/src/Resources/views/storefront/page/product-detail/buy-widget-form.html.twig
@@ -38,7 +38,7 @@
 
 {% block page_product_detail_buy_button %}
 
-    {% if mollie_subscriptions_enabled_beta and page.product.customFields.mollie_payments_product_subscription_enabled %}
+    {% if page.product.customFields.mollie_payments_product_subscription_enabled %}
         <button class="btn btn-primary btn-block btn-buy" title="{{ "molliePayments.subscriptions.product.addToCartText"|trans|sw_sanitize }}" aria-label="{{ "molliePayments.subscriptions.product.addToCartText"|trans|sw_sanitize }}">
             {{ "molliePayments.subscriptions.product.addToCartText"|trans|sw_sanitize }}
         </button>
