MOL-675-Show-Payment-Method-Transaction-Reference-in-Administration

--- a/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-user-card/sw-order-user-card.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-user-card/sw-order-user-card.html.twig
@@ -5,6 +5,11 @@
         <dt>{{ $tc('sw-order.detailExtended.labelMollieOrderId') }}</dt>
         <dd>{{ mollieOrderId }}</dd>
 
+        <template v-if="mollieThirdPartyPaymentId">
+            <dt>{{ $tc('sw-order.detailExtended.labelMollieThirdPartyPaymentId') }}</dt>
+            <dd>{{ mollieThirdPartyPaymentId }}</dd>
+        </template>
+
         <dt>{{ $tc('sw-order.detailExtended.labelMolliePaymentLink') }}</dt>
         <dd>
             <sw-button-process size="x-small"
