--- a/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-user-card/sw-order-user-card.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-user-card/sw-order-user-card.html.twig
@@ -7,11 +7,17 @@
             {{ mollieOrderId }}
             <div v-if="isSubscription">
                 <sw-label class="mollie-order-user-card-subscription-badge"
-                          variant="info" size="medium" appearance="pill" :ghost="true" :caps="true" :dismissable="false">
+                          variant="info" size="medium" appearance="pill" :ghost="true" :caps="true"
+                          :dismissable="false">
                     {{ $tc('sw-order.detailExtended.subscriptionBadge') }}
                 </sw-label>
             </div>
         </dd>
+
+        <template v-if="mollieThirdPartyPaymentId">
+            <dt>{{ $tc('sw-order.detailExtended.labelMollieThirdPartyPaymentId') }}</dt>
+            <dd>{{ mollieThirdPartyPaymentId }}</dd>
+        </template>
 
         <div v-if="hasPaymentLink">
             <dt>{{ $tc('sw-order.detailExtended.labelMolliePaymentLink') }}</dt>
