MOL-675: Add Cypress tests for reference numbers in Admin

--- a/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-user-card/sw-order-user-card.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-user-card/sw-order-user-card.html.twig
@@ -15,8 +15,12 @@
         </dd>
 
         <template v-if="mollieThirdPartyPaymentId">
-            <dt>{{ $tc('sw-order.detailExtended.labelMollieThirdPartyPaymentId') }}</dt>
-            <dd>{{ mollieThirdPartyPaymentId }}</dd>
+            <dt class="mollie-order-user-card-payment-reference-title">
+                {{ $tc('sw-order.detailExtended.labelMollieThirdPartyPaymentId') }}
+            </dt>
+            <dd class="mollie-order-user-card-payment-reference-value">
+                {{ mollieThirdPartyPaymentId }}
+            </dd>
         </template>
 
         <div v-if="hasPaymentLink">
