MOL-784: add red border to invalid iDEAL field

--- a/src/Resources/app/storefront/src/scss/checkout/payment-selection.scss
+++ b/src/Resources/app/storefront/src/scss/checkout/payment-selection.scss
@@ -17,5 +17,10 @@
 .confirm-payment {
     .mollie-ideal-issuer {
         margin-top: 15px;
+
+        .custom-select:invalid {
+            border: 1px solid red;
+        }
     }
 }
+
