--- a/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
@@ -45,6 +45,7 @@
                                 {% block sw_order_line_items_grid_mollie_actions_dropdown_refund %}
                                     <sw-context-menu-item class="sw-order-line-items-grid__actions-refund-btn"
                                                           icon="default-money-cash"
+                                                          :disabled="!isRefundManagerPossible"
                                                           @click="onOpenRefundManager">
                                         {{ $tc('sw-order.detailExtended.refundManager.btnOpenRefundManager') }}
                                     </sw-context-menu-item>
