--- a/src/Resources/app/administration/src/component/credit-card-logo/credit-card-logo.html.twig
+++ b/src/Resources/app/administration/src/component/credit-card-logo/credit-card-logo.html.twig
@@ -1,6 +1,8 @@
 {% block credit_card_logo %}
     <div>
         <component :is="creditCardComponentName" class="mollie-credit-card-logo"></component>
-        <slot></slot>
+        <span class="mollie-credit-card-text">
+            <slot></slot>
+        </span>
     </div>
 {% endblock %}
