Update all config external and internal links

--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-section-api/mollie-pluginconfig-section-api.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-section-api/mollie-pluginconfig-section-api.html.twig
@@ -2,11 +2,8 @@
     <sw-button @click="onTestButtonClicked" ref="testApiButton">
         {{ $tc('mollie-payments.config.api.testButton') }}
     </sw-button>
-    <sw-external-link
-            :small="false" icon="small-arrow-small-external" rel="noopener"
-            class="mollie-pluginconfig-payments-link-limits"
-            href="https://www.mollie.com/dashboard/developers/api-keys"
-            target="_blank">
+    <mollie-external-link class="mollie-pluginconfig-payments-link-limits"
+                      href="https://www.mollie.com/dashboard/developers/api-keys">
         {{ $tc('mollie-payments.config.api.apiLinkButton') }}
-    </sw-external-link>
+    </mollie-external-link>
 </sw-container>
