Saleschannel list was introduced in 6.4.2, dont show link in older vers.

--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-section-info/mollie-pluginconfig-section-info.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-section-info/mollie-pluginconfig-section-info.html.twig
@@ -19,7 +19,8 @@
                 </li>
                 <li class="list-item">
                     {{ $tc('mollie-payments.config.info.onboardingStep3') }}<br/>
-                    <mollie-internal-link inline :routerLink="{ name:'sw.sales.channel.list'}">
+                    <mollie-internal-link inline :routerLink="{ name:'sw.sales.channel.list'}"
+                                          v-if="hasSalesChannelList">
                         {{ $tc('mollie-payments.config.info.onboardingStep3Link') }}
                     </mollie-internal-link>
                 </li>
