MOL-627: Save credit card issuer in shopware order and display it. (#377)

--- a/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-user-card/sw-order-user-card.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-user-card/sw-order-user-card.html.twig
@@ -2,6 +2,18 @@
     {% parent %}
 
     <template v-if="mollieOrderId">
+        <div v-if="hasCreditCardData">
+            <dt>Credit Card Data</dt>
+            <dd>
+                <mollie-credit-card-logo :creditCardCompany="creditCardLabel">{{ creditCardLabel }}</mollie-credit-card-logo>
+            </dd>
+            <dd>
+                {{ creditCardNumber }}
+            </dd>
+            <dd>
+                {{ creditCardHolder }}
+            </dd>
+        </div>
         <dt>{{ $tc('sw-order.detailExtended.labelMollieOrderId') }}</dt>
         <dd>
             {{ mollieOrderId }}
