--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-section-info/mollie-pluginconfig-section-info.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-section-info/mollie-pluginconfig-section-info.html.twig
@@ -9,7 +9,9 @@
             <ol class="list">
                 <li class="list-item">
                     {{ $tc('mollie-payments.config.info.onboardingStep1') }}<br/>
-                    <a target="_blank" href="https://www.mollie.com/signup/">https://www.mollie.com/signup</a>
+                    <mollie-external-link href="https://www.mollie.com/signup/">
+                        https://www.mollie.com/signup
+                    </mollie-external-link>
                 </li>
                 <li class="list-item">
                     {{ $tc('mollie-payments.config.info.onboardingStep2') }}<br/>
@@ -17,9 +19,10 @@
                 </li>
                 <li class="list-item">
                     {{ $tc('mollie-payments.config.info.onboardingStep3') }}<br/>
-                    <a target="_blank" href="/admin/#/sw/sales/channel/list">
+                    <mollie-internal-link inline :routerLink="{ name:'sw.sales.channel.list'}"
+                                          v-if="hasSalesChannelList">
                         {{ $tc('mollie-payments.config.info.onboardingStep3Link') }}
-                    </a>
+                    </mollie-internal-link>
                 </li>
             </ol>
             <br/>
@@ -38,11 +41,10 @@
             <sw-icon name="default-communication-envelope"></sw-icon>
             {{ $tc('mollie-payments.config.info.btnRequestSupport') }}
         </sw-button>
-        <sw-external-link class="link-troubleshooting"
-                          :small="false" icon="small-arrow-small-external" rel="noopener"
-                          target="_blank" href="https://github.com/mollie/Shopware6/wiki/Troubleshooting">
+        <mollie-external-link class="link-troubleshooting"
+                              href="https://github.com/mollie/Shopware6/wiki/Troubleshooting">
             {{ $tc('mollie-payments.config.info.btnTroubleshooting') }}
-        </sw-external-link>
+        </mollie-external-link>
     </div>
     <mollie-pluginconfig-support-modal v-if="isSupportOpen" @close="closeSupport"/>
 </sw-container>
